--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@clerk/clerk-react": "^4.32.5",
     "@fontsource/cinzel": "^5.0.12",
     "@fontsource/cormorant": "^5.0.12",
+    "@vercel/postgres": "^0.10.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
